public interface State {
    public void request();
}
